fix width on mobile

--- a/stylesl.css
+++ b/stylesl.css
@@ -47,6 +47,7 @@ body {
     box-sizing: border-box;
     margin-top: 20px;
     height: 75%;
+    width: auto;
     bottom: 0;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
